--- a/Beadles.ipynb
+++ b/Beadles.ipynb
@@ -32,7 +32,7 @@
     }
    ],
    "source": [
-    "from Pillow import Image\n",
+    "from pillow import Image\n",
     "from IPython.display import display\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
