change path to image

--- a/Beadles.ipynb
+++ b/Beadles.ipynb
@@ -43,7 +43,7 @@
     "from ipywidgets import interact, IntSlider, fixed\n",
     "\n",
     "# --- User options ---\n",
-    "img_path = r'C:\\Users\\fsama\\Documents\\perso\\Van.jpg'\n",
+    "img_path = 'Van.jpg'\n",
     "\n",
     "# --- Load image to get its size for slider limits ---\n",
     "img = Image.open(img_path)\n",
